2015-09-19  Deniz Yuret  <dyuret@ku.edu.tr>

	* test/cusparse.jl:

	# nh = 1000
	# nd = 100000
	# nb = 100
	1. GPU forw using csrmm2!(x',w,y')+transpose 0.05ms
	2. GPU back (all sparse) using gemm!(x,dy',dw') 2.13ms
	3. GPU back (all sparse) using gemm!(dy,x',dw) 7.26ms

	For the first we copy sparse minibatch x to x' in gpu,
	which is a direct copy since gpu is csr.  w already right shape.
	Need to transpose y before going further, needs extra space. (THINK)
	There is really no alternative to #1 because sparse x has to come first.

	For the second we get regular dy which we need to transpose, same
	problem as the first.  Now we also need to transpose x and dw.
	Maybe I can get away with dw by setting a transpose bit since I
	have to write w+=dw kernel anyway.  (TODO: check update and
	gradient clip).  Transposing x is a pain (THINK).

	The third one is slower but we already have dy, x', and dw comes
	out right.  In fact with other shapes (nh=1500, nd=10000, nb=20)
	third one is faster, so we go with it.

	TODO:
	- write w+=dw kernel for update.
	- update ops should be compatible with sparse dw.
	- get rid of KUsparse, all code uses CUSPARSE.
	- write in-place transpose for dy or decide on extra space.
	- fix loss to deal with sparse dw.
	- assume user provides all arrays in cpu.
	- test sparse mnist.
	- complete lm.
	- write new assembler.

2015-09-18  Deniz Yuret  <dyuret@ku.edu.tr>

	* TODO:
	- new assembly language: (1,Mmul(50),2), (3,Mul2(),4,5)

	subroutine convention: takes input from 0,-1 etc. leaves output at
	last register.  no stack.  could allow symbols, variables? no
	need.  consecutive numbers enforced? makes them redundant.
	allowing symbols makes sense: (:a,Mmul(50),:b,:c).  But then what
	are the inputs?  We could use the Julia parser to get fancy
	:(a=Mmul(50,b)).  Who needs 26 variable names (lstm), numbers are
	just fine for now.  We could have (1,Input()), (2,Input()) to
	prevent arbitrary 0,-1 etc. numbering.  Good.  Eliminate the need