@@ -22,6 +22,11 @@ include("util/dense.jl");	export KUdense
 include("util/linalg.jl");
 include("util/colops.jl");	export cslice!, ccopy!, cadd!, ccat!, uniq!
 
+DynamicArrayCPU{T}(::Type{T}, d::Dims)=KUdense(Array,T,d)
+DynamicArrayGPU{T}(::Type{T}, d::Dims)=KUdense(CudaArray,T,d)
+SparseArrayCPU{T}(::Type{T}, d::Dims)=spzeros(T,d...)
+SparseArrayGPU{T}(::Type{T}, d::Dims)=CudaSparseMatrixCSR(spzeros(T,d...))
+
 include("param.jl");		export KUparam, setparam! # TODO: move this up to src
 include("update.jl");		export update!
 include("data.jl");		export Data, ItemTensor
@@ -45,8 +50,8 @@ include("model/lstm.jl");	export LSTM
 include("model/s2c.jl");	export S2C
 # include("model/kperceptron.jl"); export KPerceptron # TODO: get KUsparse fixed
 
-include("data/adding.jl");	export Adding
-include("data/mnist.jl");	export MNIST
-include("data/pixels.jl");	export Pixels
+# include("data/adding.jl");	export Adding
+# include("data/mnist.jl");	export MNIST
+# include("data/pixels.jl");	export Pixels
 
 end # module
